Fix scrolling issue on IE11 mobile.

--- a/files/cat.css
+++ b/files/cat.css
@@ -1,4 +1,3 @@
-
 * {
   margin: 0;
   padding: 0;
@@ -13,4 +12,5 @@ body {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
+  touch-action: none;
 }
